feat: add SDXL and SD1.5 outpainting pipelines with ControlNet integration
This commit introduces support for outpainting using both SDXL and SD1.5 models with ControlNet. Key changes include:
- Added `pipeline_fill_sd_xl.py` for SDXL outpainting with ControlNet.
- Updated `main.py` to support SD1.5 outpainting with ControlNet.
- Modified `requirements.txt` to include SDXL dependencies.
- Updated `README.md` to reflect the new outpainting capabilities.
- Added new model weights and updated the model download script.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ torchvision==0.11.1
 Pillow==9.0.1
 requests==2.27.1
 python-multipart==0.0.9
+# SDXL dependencies
+transformers
+accelerate
+diffusers
+huggingface-hub
